Make the extended permissions dialog work again for people without acl support.

BUG: 114731

svn path=/branches/KDE/3.5/kdelibs/; revision=473134